# ai-invention-6db730-decoy-gated-neuro-symbolic-extraction-a

./: README.md
round-1/dataset-1/src/: .terminal_claude_agent_struct_out.json  data.py  full_data_out.json  preview_data_out.json  pyproject.toml  verify_dataset.py
round-1/dataset-2/src/: .terminal_claude_agent_struct_out.json  data.py  dataset_meta.json  entity_type_schema.json  mini_data_out.json  preview_data_out.json  pyproject.toml  relation_schema.json  row_schema.json
round-2/dataset-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  README.md  data.py  dataset_meta.json  full_data_out.json  preview_data_out.json  pyproject.toml  regenerate.sh  requirements.txt
round-2/dataset-1/src/logs/: hf_search_results.txt  preview_batch1.txt  web_search_provenance.txt
round-2/dataset-1/src/raw/ecfr/: title-12-part-1016.xml
round-2/dataset-1/src/raw/gdpr/: art-13.html  art-17.html  art-18.html  art-19.html  art-20.html  art-22.html  art-30.html  art-44.html  art-77.html
round-2/dataset-1/src/raw/wikinews/: allpages_0.json  allpages_1.json  article_0002.json  article_0004.json  article_0006.json  article_0007.json  article_0008.json  article_0009.json  article_0013.json  article_0015.json  article_0017.json  article_0023.json  article_0024.json  article_0025.json  article_0027.json  article_0028.json  article_0032.json  article_0039.json  article_0046.json  article_0047.json  article_0050.json  article_0054.json  article_0059.json  article_0060.json  article_0063.json  article_0064.json  article_0065.json  article_0067.json  article_0068.json  article_0069.json  article_0070.json  article_0074.json  article_0077.json  article_0078.json  article_0082.json  article_0083.json  article_0087.json  article_0093.json  article_0096.json  article_0100.json  (+49 more)
round-2/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  llm_client.py  method.py  method_out.json  pipeline.py  preview_method_out.json  pyproject.toml  summarize.py  tests.py
round-2/experiment-1/src/checkpoints/: confirm_scored.json  confirm_units.json  pilot_scored.json  pilot_units.json
round-2/experiment-1/src/data/: mini_data_out.json
round-2/experiment-2/src/: .terminal_claude_agent_struct_out.json  README.md  full_method_out.json  llm_client.py  make_figures.py  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
round-2/experiment-3/src/: .terminal_claude_agent_struct_out.json  README.md  analyze.py  common.py  extract.py  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  prompts.py  pyproject.toml  summarize.py
round-2/experiment-3/src/checkpoints/confirmatory/: redocred_dev_136.json  redocred_dev_217.json  redocred_dev_459.json  redocred_dev_490.json  redocred_test_239.json  redocred_test_247.json  redocred_test_359.json  redocred_test_419.json  redocred_test_72.json  redocred_test_89.json  redocred_train_100.json  redocred_train_1031.json  redocred_train_1186.json  redocred_train_1206.json  redocred_train_1233.json  redocred_train_1287.json  redocred_train_1655.json  redocred_train_1694.json  redocred_train_189.json  redocred_train_1998.json  redocred_train_2013.json  redocred_train_2266.json  redocred_train_2354.json  redocred_train_2373.json  redocred_train_2678.json  redocred_train_2769.json  redocred_train_2957.json  redocred_train_328.json  redocred_train_340.json  redocred_train_365.json  redocred_train_594.json  redocred_train_698.json  redocred_train_763.json  redocred_train_785.json  redocred_train_810.json  redocred_train_835.json
round-2/experiment-3/src/checkpoints/mini/: redocred_dev_459.json  redocred_test_477.json
round-2/experiment-3/src/logs/: cost.jsonl
round-3/experiment-1/src/: .terminal_claude_agent_struct_out.json  README.md  data.py  fdr_core.py  full_method_out.json  llm_client.py  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  summarize.py
round-3/experiment-1/src/logs/: full_run.out
round-3/experiment-3/src/: .terminal_claude_agent_struct_out.json  README.md  analyze.py  common.py  figures.py  full_method_out.json  llm.py  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  regime.py  summarize.py  test_plumbing.py
round-3/experiment-3/src/logs/: cost.jsonl  validate_out.json
round-4/evaluation-1/src/: .terminal_claude_agent_struct_out.json  README.md  eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
round-4/experiment-1/src/: .terminal_claude_agent_struct_out.json  README.md  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml  summarize.py
round-4/experiment-1/src/checkpoints/: pipe.json
round-4/experiment-1/src/logs/: run40.out  run_full.out
round-4/experiment-2/src/: .terminal_claude_agent_struct_out.json  README.md  finalize.py  full_data_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
round-4/experiment-2/src/checkpoints/: phase0.json  pipe_nano.json  pipe_strong.json
round-4/experiment-3/src/: .terminal_claude_agent_struct_out.json  README.md  build_figures.py  full_method_out.json  make_figures.py  method.py  method_out.json  mini_method_out.json  preview_method_out.json  prob_reasoner.py  pyproject.toml  typing_sumo.py
round-4/experiment-3/src/logs/: cost.jsonl  full_iter4.out  full_warm.out
round-4/experiment-3/src/prob_trace_graphs/: prob_trace_legal_cuad_00.dot  prob_trace_legal_cuad_00.json  prob_trace_news_wikinews_02.dot  prob_trace_news_wikinews_02.json  prob_trace_reg_gdpr_07.dot  prob_trace_reg_gdpr_07.json  prob_trace_reg_gdpr_13.dot  prob_trace_reg_gdpr_13.json
round-4/experiment-3/src/trace_graphs/: trace_legal_cuad_00.dot  trace_legal_cuad_00.json  trace_legal_cuad_01.dot  trace_legal_cuad_01.json  trace_legal_cuad_04.dot  trace_legal_cuad_04.json  trace_news_wikinews_02.dot  trace_news_wikinews_03.dot  trace_reg_gdpr_07.json  trace_reg_gdpr_13.dot  trace_reg_gdpr_13.json
(+1101 files in other folders)
