[project]
name = "clutrr-crisp-gold-anchor"
version = "0.1.0"
description = "CLUTRR Crisp-Gold Calibration Anchor dataset builder (atomic + multi-hop kinship triples, k-difficulty splits)"
requires-python = ">=3.12"
dependencies = [
    "attrs==26.1.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "loguru==0.7.3",
    "psutil==7.2.2",
    "referencing==0.37.0",
    "rpds-py==2026.5.1",
    "typing-extensions==4.15.0",
]
