[project]
name = "redocred-prep"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "attrs==26.1.0",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "loguru==0.7.3",
    "narwhals==2.22.1",
    "numpy==2.4.6",
    "referencing==0.37.0",
    "rpds-py==2026.5.1",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "threadpoolctl==3.6.0",
    "typing-extensions==4.15.0",
]
