[project]
name = "application-anchor-dataset"
version = "1.0.0"
description = "Genre-faithful application anchor: short legal/news/regulatory documents with triple-schema gold facts, char-span provenance, and coarse entity typing (text->FOL->Prolog experiment anchor)."
requires-python = ">=3.12"
dependencies = [
  "annotated-doc==0.0.4",
  "annotated-types==0.7.0",
  "attrs==26.1.0",
  "beautifulsoup4==4.12.3",
  "blis==0.7.11",
  "catalogue==2.0.10",
  "certifi==2026.5.20",
  "charset-normalizer==3.4.7",
  "click==8.4.1",
  "cloudpathlib==0.24.0",
  "confection==0.1.5",
  "cymem==2.0.13",
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl",
  "idna==3.18",
  "jinja2==3.1.6",
  "joblib==1.5.3",
  "jsonschema-specifications==2025.9.1",
  "jsonschema==4.23.0",
  "langcodes==3.5.1",
  "loguru==0.7.2",
  "lxml==5.3.0",
  "markdown-it-py==4.2.0",
  "markupsafe==3.0.3",
  "mdurl==0.1.2",
  "murmurhash==1.0.15",
  "nltk==3.9.1",
  "numpy==1.26.4",
  "packaging==26.2",
  "pandas==2.2.3",
  "preshed==3.0.13",
  "pydantic-core==2.46.4",
  "pydantic==2.13.4",
  "pygments==2.20.0",
  "python-dateutil==2.9.0.post0",
  "pytz==2026.2",
  "referencing==0.37.0",
  "regex==2026.5.9",
  "requests==2.32.3",
  "rich==15.0.0",
  "rpds-py==2026.5.1",
  "setuptools==82.0.1",
  "shellingham==1.5.4",
  "six==1.17.0",
  "smart-open==7.6.1",
  "soupsieve==2.8.4",
  "spacy-legacy==3.0.12",
  "spacy-loggers==1.0.5",
  "spacy==3.7.5",
  "srsly==2.5.3",
  "tenacity==9.0.0",
  "thinc==8.2.4",
  "tqdm==4.68.2",
  "typer-slim==0.24.0",
  "typer==0.26.7",
  "typing-extensions==4.15.0",
  "typing-inspection==0.4.2",
  "tzdata==2026.2",
  "urllib3==2.7.0",
  "wasabi==1.1.3",
  "weasel==0.4.3",
  "wrapt==2.2.1"
]

[tool.uv]
# Reproducibility: all versions pinned to the exact set installed in .venv.
# Regenerate the dataset deterministically with:  python data.py
