[project]
name = "decoy-fdr-experiment"
version = "0.1.0"
description = "S1 decoy-signature + spontaneous-error tail match + Generator!=Scorer de-circularization for a label-free decoy-competition FDR gate on CLUTRR crisp gold"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.6",
    "scipy==1.17.1",
    "aiohttp==3.14.1",
    "loguru==0.7.3",
    "tenacity==9.1.4",
    "requests==2.34.2",
    "psutil==7.2.2",
    "jsonschema==4.26.0",
    "matplotlib==3.11.0",
]
