[project]
name = "iter3-sc-fdr-diagonal"
version = "0.1.0"
description = "Iter-3 P1: powered self-consistency CLUTRR realized-FDR calibration diagonal with decoy_fdr_hat self-report check, S1b difficulty ladder, full crux match, entrapment corroboration."
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.17.1",
    "loguru==0.7.3",
    "aiohttp==3.14.1",
    "tenacity==9.1.4",
    "psutil==7.2.2",
    "matplotlib==3.11.0",
]
