[project]
name = "redocred-operational-wedge-p3"
version = "0.3.0"
description = "P3: Re-DocRED decoy-gating-vs-plain-threshold wedge (152+36 docs), reframed as a label-free regime-diagnostic that predicts the null wedge gold-free"
requires-python = ">=3.12"
# All versions pinned to exactly what is installed in .venv (`.venv/bin/python -m pip freeze`).
# torch is the CPU-usable build (no GPU on this host); install with:
#   uv pip install torch==2.12.0 --index-strategy unsafe-best-match --extra-index-url https://download.pytorch.org/whl/cpu
dependencies = [
    "aiohttp==3.14.1",
    "tenacity==9.1.4",
    "loguru==0.7.3",
    "numpy==2.4.6",
    "scipy==1.17.1",
    "scikit-learn==1.9.0",
    "sentence-transformers==5.5.1",
    "transformers==5.12.1",
    "tokenizers==0.22.2",
    "huggingface-hub==1.19.0",
    "safetensors==0.8.0",
    "rank-bm25==0.2.2",
    "psutil==7.2.2",
    "matplotlib==3.11.0",
    "torch==2.12.0",
]
