[project]
name = "gen-art-evaluation-1"
version = "0.1.0"
description = "Zero-API CPU-only demotion evaluation: A=C identity, signal redundancy, regime mispredict audit"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.6",
    "scipy==1.17.1",
    "matplotlib==3.11.0",
    "loguru==0.7.3",
]
