[project]
name = "iter4-p1-powered-deconfounded-fdr-diagonal"
version = "0.1.0"
description = "Iter-4 P1: full 593-doc powered self-consistency CLUTRR realized-FDR calibration diagonal for the label-free decoy-competition (knockoff+) gate; adds the per-pair PAIRED statistic reported distinctly from the marginal crux and across four (Generator,Scorer) configs (incl. cross-family ministral-8b), a zero-API false-positive-density de-confound stratification, a budget-gated stronger-extractor (gpt-4.1-mini) de-confound arm, and a power-or-bound S1b ladder."
requires-python = ">=3.12"
dependencies = [
    "numpy==1.26.4",
    "scipy==1.17.1",
    "loguru==0.7.3",
    "aiohttp==3.14.1",
    "tenacity==9.1.4",
    "psutil==7.2.2",
    "matplotlib==3.11.0",
]
