[project]
name = "decoy-fdr-anchor-experiment"
version = "0.1.0"
description = "P2: Hallucination-reduction of decoy-gated neuro-symbolic extraction vs raw LLM / RAG / CoT on the 24-doc legal/news/regulatory anchor, with auditable trace-graphs"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.6",
    "scipy==1.17.1",
    "aiohttp==3.14.1",
    "loguru==0.7.3",
    "tenacity==9.1.4",
    "requests==2.34.2",
    "psutil==7.2.2",
    "jsonschema==4.26.0",
    "matplotlib==3.11.0",
    "nltk==3.9.1",
    "rank-bm25==0.2.2",
    "networkx==3.4.2",
    "graphviz==0.20.3",
    "problog==2.2.10",
    "setuptools==82.0.1",
]
